Use local persistence in ShardManager
Do not use Pekko persistence when saving the shard list, but rather our
own format.

JIRA: CONTROLLER-2134
Change-Id: Ia72cad1f8d68c7a54320656b1d4e2ae743d68639
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>